--- a/tercera_1.html
+++ b/tercera_1.html
@@ -7,6 +7,7 @@
     <title>La tercera es la vencida</title>
 </head>
 <body>
-    <p>Ahora si!</p>
+    <p>Ahora si que si!</p>
+    <p>Nos fuimos papá</p>
 </body>
 </html>
